--- a/index.html
+++ b/index.html
@@ -70,20 +70,8 @@
 
 <!-- HOME SECTION -->
 
-<!-- <div class="homepage-hero-module">
-    <div class="video-container">
-        <div class="filter"></div>
-        <video autoplay loop class="fillWidth">
-            <source src="Hello-World/Hello-World.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            <source src="Hello-World/Hello-World.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-        </video>
-        <div class="poster hidden">
-            <img src="Hello-World/Hello-World.jpg" alt="">
-        </div>
-    </div>
-</div> -->
 
-<section id="home">
+<!-- <section id="home">
      <div class="container">
           <div class="row">
                <div class="col-md-8 col-sm-12">
@@ -109,6 +97,22 @@
                        <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfb0d3eVZfanl0WGs/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
                    </div>
                </div>
+          </div>
+     </div>
+</section> -->
+
+<section id="home">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-8 col-sm-12">
+                    <div class="home-thumb">
+                         <h3 class="wow fadeInUp" data-wow-delay="0.4s">Hey there, I am Amer Gheith.</h3>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Frontend Developer</h1>
+                         <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
+                    </div>
+               </div>
+
           </div>
      </div>
 </section>
