--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
                <div class="col-md-8 col-sm-12">
                     <div class="home-thumb">
-                         <h3 class="wow fadeInUp" data-wow-delay="0.4s">Hey there, I am Amer Gheith.</h3>
-                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Frontend Developer</h1>
+                         <h3 class="wow fadeInUp" data-wow-delay="0.4s">Welcome to my page, I am Amer Gheith.</h3>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Full Stack Web Developer</h1>
                          <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
                     </div>
                </div>
