--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="home-thumb">
                          <h3 class="wow fadeInUp" data-wow-delay="0.4s">Welcome to my page, I am Amer Gheith.</h3>
                          <h1 class="wow fadeInUp" data-wow-delay="0.6s">Full Stack Web Developer</h1>
-                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfb0d3eVZfanl0WGs/view?usp=sharing" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
+                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfb0d3eVZfanl0WGs/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
                     </div>
                </div>
 
