--- a/index.html
+++ b/index.html
@@ -278,6 +278,55 @@
 
                <hr>
 
+               <div>
+                   <h2 class="selectedworks">Coding Dojo Projects</h2>
+                   <hr>
+                   <p class="selectedworks">Some of the major projects I completed during the programming bootcamp</p>
+
+                   <p>Dojo Secrets is an app where users can post and delete secrets that they posted, and like secrets posted by others.</p>
+
+
+                   <ul>
+                       <li>Technologies used: Django/Python, and SQLite.</li>
+                       <li>Login and registration system. Validations apply.</li>
+                       <li>Display the 5 or 10 most recent secrets. Also include a "Most Popular" page, which shows all secrets, sorted by number of likes (most likes is first).</li>
+                       <li>Show how many likes the secrets has received, a link to like that secret if the user hasn't already, and--if the logged-in user posted this secret--an option to delete.</li>
+                       <li><a href="54.219.175.196"><strong>Click Here to Post Your Secrets<strong></a></li>
+                   </ul>
+                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                        <!-- WORK THUMB -->
+                        <div class="work-thumb">
+                             <a href="images/secrets1.png" class="image-popup">
+
+                                  <img src="images/secrets1.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                             </a>
+                        </div>
+                   </div>
+
+                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                        <!-- WORK THUMB -->
+                        <div class="work-thumb">
+                             <a href="images/secrets2.png" class="image-popup">
+
+                                  <img src="images/secrets2.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                             </a>
+                        </div>
+                   </div>
+
+                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                        <!-- WORK THUMB -->
+                        <div class="work-thumb">
+                             <a href="images/secrets3.png" class="image-popup">
+
+                                  <img src="images/secrets3.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                             </a>
+                        </div>
+                   </div>
+
+
+               </div>
+               <hr>
+
 
 
           </div>
