Updated Selected works

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                        <li>Login and registration system. Validations apply.</li>
                        <li>Display the 5 or 10 most recent secrets. Also include a "Most Popular" page, which shows all secrets, sorted by number of likes (most likes is first).</li>
                        <li>Show how many likes the secrets has received, a link to like that secret if the user hasn't already, and--if the logged-in user posted this secret--an option to delete.</li>
-                       <li><a href="54.219.175.196"><strong>Click Here to Post Your Secrets<strong></a></li>
+                       <li><a href="ec2-54-219-175-196.us-west-1.compute.amazonaws.com"><strong>Click Here to Post Your Secrets<strong></a></li>
                    </ul>
                    <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
                         <!-- WORK THUMB -->
