--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="home-thumb">
                          <h3 class="wow fadeInUp" data-wow-delay="0.4s">Welcome to my page, I am Amer Gheith.</h3>
                          <h1 class="wow fadeInUp" data-wow-delay="0.6s">Full Stack Web Developer</h1>
-                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfb0d3eVZfanl0WGs/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
+                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfMFc4NnBKMllsTkE/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
                     </div>
                </div>
 
@@ -195,7 +195,7 @@
                <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <!-- SECTION TITLE -->
                     <h2 class="myresume">My Resume</h2>
-                    <p>Read more about me! Download my resume right<a href="https://drive.google.com/file/d/0B6mHpBbaAZhfb0d3eVZfanl0WGs/view?usp=sharing" target = "_blank"> HERE</a><i class="fa fa-hand-o-left" aria-hidden="true"></i></p>
+                    <p>Read more about me! Download my resume right<a href="https://drive.google.com/file/d/0B6mHpBbaAZhfMFc4NnBKMllsTkE/view?usp=sharing" target = "_blank"> HERE</a><i class="fa fa-hand-o-left" aria-hidden="true"></i></p>
                </div>
 
                <div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -278,7 +278,7 @@
 
                <hr>
 
-               <div>
+               <!-- <div>
                    <h2 class="selectedworks">Coding Dojo Projects</h2>
                    <hr>
                    <p class="selectedworks">Some of the major projects I completed during the programming bootcamp</p>
@@ -291,37 +291,37 @@
                        <li>Login and registration system. Validations apply.</li>
                        <li>Display the 5 or 10 most recent secrets. Also include a "Most Popular" page, which shows all secrets, sorted by number of likes (most likes is first).</li>
                        <li>Show how many likes the secrets has received, a link to like that secret if the user hasn't already, and--if the logged-in user posted this secret--an option to delete.</li>
-                       <li><a href="ec2-54-219-175-196.us-west-1.compute.amazonaws.com"><strong>Click Here to Post Your Secrets<strong></a></li>
-                   </ul>
-                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                       <li><a href="amergheith.me/lets_chat"><strong>Click Here to Post Your Secrets<strong></a></li>
+                   </ul> -->
+                   <!-- <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s"> -->
                         <!-- WORK THUMB -->
-                        <div class="work-thumb">
+                        <!-- <div class="work-thumb">
                              <a href="images/secrets1.png" class="image-popup">
 
                                   <img src="images/secrets1.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
                              </a>
                         </div>
-                   </div>
+                   </div> -->
 
-                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                   <!-- <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s"> -->
                         <!-- WORK THUMB -->
-                        <div class="work-thumb">
+                        <!-- <div class="work-thumb">
                              <a href="images/secrets2.png" class="image-popup">
 
                                   <img src="images/secrets2.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
                              </a>
                         </div>
-                   </div>
+                   </div> -->
 
-                   <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                   <!-- <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s"> -->
                         <!-- WORK THUMB -->
-                        <div class="work-thumb">
+                        <!-- <div class="work-thumb">
                              <a href="images/secrets3.png" class="image-popup">
 
                                   <img src="images/secrets3.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
                              </a>
                         </div>
-                   </div>
+                   </div> -->
 
 
                </div>
