Updated Selected Work

--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@
 
                <div>
                    <h2 class="selectedworks">Coding Dojo Projects</h2>
-                   <hr>
                    <p class="selectedworks">Some of the major projects I completed during the programming bootcamp</p>
 
                    <p>Dojo Secrets is an app where users can post and delete secrets that they posted, and like secrets posted by others.</p>
@@ -322,14 +321,49 @@
                              </a>
                         </div>
                    </div>
-
-
                </div>
-               <hr>
-
-
 
           </div>
+          <hr>
+              <div class="">
+                  <p>Servey Poll- built with a MEAN (MongodDb, ExpressJS, AngularJS, and NodeJS) Web Development </p>
+                  <ul>
+                      <li>A survey can only be deleted by the user who created that survey.</li>
+                      <li>Each created poll is displayed as who is the creator, and the date the poll was created.</li>
+                      <li>Add options with validations. No empty entries, All fields must be filled out, At least 8 characters for Question, and 3 characters for Options.</li>
+                      <li>Count of votes increased by 1 everytime a user clicks the "Vote" for each option.</li>
+                      <li><a href="http://54.183.73.153"><strong>Add your Survey Right Here...</strong></a></li>
+                  </ul>
+                  <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                       <!-- WORK THUMB -->
+                       <div class="work-thumb">
+                            <a href="images/polls.png" class="image-popup">
+
+                                 <img src="images/polls.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                            </a>
+                       </div>
+                  </div>
+
+                  <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                       <!-- WORK THUMB -->
+                       <div class="work-thumb">
+                            <a href="images/polls2.png" class="image-popup">
+
+                                 <img src="images/polls2.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                            </a>
+                       </div>
+                  </div>
+
+                  <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.4s">
+                       <!-- WORK THUMB -->
+                       <div class="work-thumb">
+                            <a href="images/polls3.png" class="image-popup">
+
+                                 <img src="images/polls3.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                            </a>
+                       </div>
+                  </div>
+              </div>
      </div>
 </section>
 
