--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                <div class="col-md-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 
                    <img src="images/angular.png" alt="">
+                   <img src="images/react.png" alt="">
                    <img src="images/bootstrap.png" alt="">
                    <img src="images/htmlcss.png" alt="">
                    <img src="images/js.png" alt="">
@@ -171,11 +172,9 @@
                    <img src="images/jquery.png" alt="">
                    <img src="images/node.png" alt="">
                    <img src="images/python.png" alt="">
-                   <img src="images/django.png" alt="">
                    <img src="images/ruby.png" alt="">
                    <img src="images/rails.png" alt="">
                    <img src="images/sqlite.png" alt="">
-                   <img src="images/postgresql.png" alt="">
                    <img src="images/mysql.png" alt="">
                    <img src="images/mongodb.png" alt="">
                    <img src="images/git.png" alt="">
@@ -280,7 +279,7 @@
                <hr>
 
           </div>
-          
+
      </div>
 </section>
 
