--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="home-thumb">
                          <h3 class="wow fadeInUp" data-wow-delay="0.4s">Welcome to my page, I am Amer Gheith.</h3>
                          <h1 class="wow fadeInUp" data-wow-delay="0.6s">Full Stack Web Developer</h1>
-                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfeXZBYUFoS3I2Unc/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
+                         <a href="https://drive.google.com/file/d/0B6mHpBbaAZhfanZnRW1Dd3BwSlk/view?usp=sharing" target = "_blank" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume PDF</a>
                     </div>
                </div>
 
@@ -137,8 +137,9 @@
                               <p><strong>Full Stack Web Developer</strong> <i class="fa fa-keyboard-o" aria-hidden="true"></i></p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Motivated technology and web development guru specializing in various full-stacks. Creative web developer dedicated to create dynamic and optimize the performance of web applications fueling competitive advantage and revenue growth.</p>
-                              <p>Cultivated data-driven in manipulating the value of data to establish high quality delivery in seeking out product objectives and strategies; analyze according to apply decision-making and measure outcomes across the organization.</p>
+                              <p>Growth is the underlying passion that drives my marketing and entrepreneurial spirit.</p>
+                              <p>With extensive cultivated data-driven in understanding the value of data to establish high quality delivery in seeking out product objectives and strategies, I bring this expertise to companies who are looking for a change in growth, brand development, and team building. </p>
+                              <p>My skill set from specializing in software development to problem-solving, is striving for strategic vision and collaboration to apply the best strategies into identifying the organization’s competitive advantages for potential market niches.</p>
                               <p>Check my projects here <strong><a href="https://github.com/agheith">Github </a><i class="fa fa-github-alt" aria-hidden="true"></i><strong>
                          </div>
                     </div>
@@ -157,8 +158,7 @@
                <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <!-- SECTION TITLE -->
                     <h2 class="whatido">What I Do</h2>
-                    <p>If I am not working, I am actively seeking new programming knowledge, constantly curious and highly motivated.</p>
-                    <p>I have been able to quickly adapt and pick up new technologies, more contributions will be coming as I keep up to date with advances in computer technology.</p>
+                    <p>If I am not working, I am actively seeking new programming knowledge, constantly curious and highly motivated. I have been able to quickly adapt and pick up new technologies, more contributions will be coming as I keep up to date with advances in computer technology.</p>
                </div>
 
                <div class="col-md-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -177,7 +177,6 @@
                    <img src="images/sqlite.png" alt="">
                    <img src="images/mysql.png" alt="">
                    <img src="images/mongodb.png" alt="">
-                   <img src="images/git.png" alt="">
                </div>
 
           </div>
@@ -195,7 +194,7 @@
                <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <!-- SECTION TITLE -->
                     <h2 class="myresume">My Resume</h2>
-                    <p>Read more about me! Download my resume right<a href="https://drive.google.com/file/d/0B6mHpBbaAZhfeXZBYUFoS3I2Unc/view?usp=sharing" target = "_blank"> HERE</a><i class="fa fa-hand-o-left" aria-hidden="true"></i></p>
+                    <strong><p>Read more about me! Download my resume right<a href="https://drive.google.com/file/d/0B6mHpBbaAZhfanZnRW1Dd3BwSlk/view?usp=sharing" target = "_blank"> HERE</a><i class="fa fa-hand-o-left" aria-hidden="true"></i></p></strong>
                </div>
 
                <div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -231,8 +230,12 @@
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2 class="selectedworks">Seleted Works</h2>
-                         <p>Some of the major projects I have contributed to <i class="fa fa-users" aria-hidden="true"></i> </p>
+                        <h2 class="selectedworks">Seleted Works</h2>
+                        <p><strong>Some of the major projects I have contributed to </strong><i class="fa fa-users" aria-hidden="true"></i> </p>
+                        <hr><hr>
+
+                         <h2 class="selectedworks">Rollick</h2>
+                         <p><strong>Click here to read about the Winner App</strong> <a href="https://aspenprojectplay.org/events/sap-innojam-coding-future"target = "_blank"><strong> CLICK HERE <i class="fa fa-chevron-circle-left" aria-hidden="true"></i></strong></a></p>
                     </div>
                </div>
 
@@ -271,12 +274,21 @@
                     <div class="work-thumb">
                          <a href="images/10.png" class="image-popup">
                               <img src="images/10.png" class="img-responsive" alt="Work" style="height:250px; width:250px;">
+                              <p><strong></strong> <a href="https://drive.google.com/open?id=0B6mHpBbaAZhfTnVJdG82TkRwVzQ"target = "_blank"><strong> Click here for more details...<i class="fa fa-chevron-circle-left" aria-hidden="true"></i></strong></a></p>
+
                          </a>
-                         <p><strong>Read more about the Winner App</strong> <a href="https://drive.google.com/open?id=0B6mHpBbaAZhfTnVJdG82TkRwVzQ"target = "_blank"><strong> CLICK HERE <i class="fa fa-chevron-circle-left" aria-hidden="true"></i></strong></a></p>
                     </div>
                </div>
 
                <hr>
+
+               <div class="col-md-12 col-sm-12">
+                   <h1 class="selectedworks">Udacity My Reads App<p> <strong><a href="https://github.com/agheith/my-reads">My-Reads Repo </a><i class="fa fa-github-alt" aria-hidden="true"></i><strong></h1>
+                   <hr>
+                   <p>This application allows you to place selected books into a designated shelf. Users can also search the Udacity database for books to add to their initial book shelfs. There are two pages. The Homepage displays the three bookshelfs, Currently Reading, Want To Read, and Already Read. The search page will allow the user to search for books. The back-end server for this project is mocked, so the search terms are limited, and can be found in SEARCH_TERMS.md.</p>
+                   <p>Check it out by clicking <strong><a href="https://guarded-headland-46048.herokuapp.com/">Here</a></strong></p>
+                   <img src="images/my_reads.gif" alt="myreads" style="width: 80%; margin: 10px 0 0 100px;">
+               </div>
 
           </div>
 
