--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta name="keywords" content="Personal Template, Minimal Resume HTML Template, Freelancer">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+<link rel="icon" href="img/port_img.ico">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/magnific-popup.css">
